# Promptsops-Ollama-DSPY

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  benchmarking.md
scripts/: check_benchmark_regression.py  debug_failures.py  healthcheck.py  optimize.py  run_demo.py  run_eval.py
src/promptsops/: __init__.py  artifacts.py  benchmark_regression.py  config.py  dataset.py  eval_runner.py  healthcheck.py  metrics.py  optimizer.py  program.py  results.py  signatures.py  tracing.py
tests/: test_artifact_load.py  test_artifacts_unit.py  test_benchmark_regression_unit.py  test_config_unit.py  test_dataset_unit.py  test_eval_deterministic.py  test_eval_llm_judge.py  test_eval_runner_unit.py  test_healthcheck.py  test_metrics_unit.py  test_results_unit.py  test_tracing_unit.py
